resources/sass/bootstrap-sidebar.scss
body {
    min-height: 100vh;
    min-height: -webkit-fill-available;
}

html {
    height: -webkit-fill-available;
}

main {
    display: flex;
    flex-wrap: nowrap;
}

.b-example-divider {
    flex-shrink: 0;
    width: 1.5rem;
    height: 100vh;
    background-color: rgba(0, 0, 0, .1);
    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

.bi {
    vertical-align: -.125em;
    pointer-events: none;
    fill: currentColor;
}

.dropdown-toggle { outline: 0; }

.nav-flush .nav-link {
    border-radius: 0;
}

.btn-nav {
    border: 0;
}


.btn-toggle {
    display: inline-flex;
    align-items: center;
    padding: .25rem .5rem;
    font-weight: 600;
    color: var(--bs-body-color);
    background-color: transparent;
    border: 0;
    text-align: start;
}
.btn-toggle:hover,
.btn-toggle:focus,
.btn-nav:hover,
.btn-nav:focus {
    color: var(--bs-light);
    background-color: var(--bs-dark-border-subtle);
}

.btn-toggle::before {
    width: 1.25em;
    line-height: 0;
    color: var(--bs-body-color);
    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28255,255,255,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
    transition: transform .35s ease;
    transform-origin: .5em 50%;
    display: inline-block;
}

.btn-toggle[aria-expanded="true"] {
    color: var(--bs-light);;
}
.btn-toggle[aria-expanded="true"]::before {
    transform: rotate(90deg);
}

.btn-toggle-nav a {
    display: inline-flex;
    padding: .1875rem .5rem;
    margin-top: .125rem;
    margin-left: 1.25rem;
    text-decoration: none;
    color: var(--bs-body-color);
}
.btn-toggle-nav a:hover,
.btn-toggle-nav a:focus {
    background-color: var(--bs-dark-border-subtle);
}
.btn-toggle-nav .active, .btn-nav.active {
    background-color: var(--bs-dark-border-subtle);
}


.scrollarea {
    overflow-y: auto;
}

.fw-semibold { font-weight: 600; }
.lh-tight { line-height: 1.25; }


.navbar {
    height: 4em;
}
.nav-ul>li {
    border-top: 1px solid var(--bs-dark);
    padding-top: 0.3em;
    padding-bottom: 0.3em;
}
.navbar2 {
    z-index: 100;
    height: 100vh !important;
    overflow: auto;
    background: var(--bs-dark-bg-subtle);
}
.navbar2-items {
    min-width: 18em;
}
.navbar2-padding {
    min-width: 18em;
}

.navbar2 li, .navbar2 a, .navbar2 button {
    font-size: 1.1rem;
    margin-top: 0.1em;
    margin-bottom: 0.1em;
}
.navbar2-padding>ul>li>a.btn, .navbar2 button.btn-toggle {
    width: 100%;
    text-align: start;
}

.navbar2 button .bi, .navbar2 a .bi{
    padding: 0 0.4em 0 0;
}

body {
    background: var(--bs-dark-bg-subtle);
}
.main-col {
    background: var(--bs-dark);
    min-height: 100dvh;
}

@include media-breakpoint-up(lg) {
    .navbar2 {
        display: block !important;
        box-shadow: #000 0px 0px 4px inset;
    }
    .main-col {
        box-shadow: rgba(0,0,0,0.5) 0px 0px 10px;
    }
    .navbar2-items {
        max-width: 18em;
    }
}
@include media-breakpoint-down(lg) {
    #dayTabs {
        top: 3.6em;
    }
    .navbar2-items {
        width: 80vw;
        max-width: 25em;
    }
    .navbar2 li, .navbar2 a, .navbar2 button {
        font-size: 1.4rem;
    }
    .navbar {
        position: fixed !important;
        width: 100vw !important;
        z-index: 1200;
        left: 0;
        top: 0;
    }
    .navbar2 {
        box-shadow: #000 0px 0px 10px;
        clip-path: inset(0px -10px 0px 0px);
        height: 100%;
        z-index: 100;
        position: fixed;
    }

    .navbar2-padding {
        padding-top: 5em;
        padding-bottom: 1em;
        width: 100%;
    }
    .navbar2 .navbar-brand {
        display: none;
    }
    main {
        margin-top: 3.6em;
        width: 100vw;
    }
}

